# shorter

./: LICENSE  README.md  app.py  pyproject.toml  repository.py  service.py  tests.py
src/shorter/: app.py  service.py
tests/: test_shorter.py
