[project]
name = "shorter"
version = "0.1.0"
description = "Small URL shorter service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "segno>=1.6.6",
    "uvicorn>=0.40.0",
]

[project.urls]
"Source Code" = "https://github.com/maximRRStudios/shorter"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shorter*"]

[tool.setuptools.package-dir]
"" = "src"